# earthplay

./: Cargo.toml
discover/: Cargo.toml
discover/src/: main.rs
proto/: Cargo.toml
proto/src/: stuff.rs  util.rs
src/: lib.rs  stuff.rs
transmit/: Cargo.toml
transmit/src/: main.rs
