[package]
name = "transmit"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20-poly1305 = "0.1.2"
ed25519-dalek = { version = "3.0.0-pre.0", features = ["rand_core"] }
mdns-sd.workspace = true
plist = "1.8.0"
proto.workspace = true
rand = "0.9.2"
reqwest = "0.12.24"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
